--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 .navbar{
-    background: rgba(0,0,0,0.9) url('portfolio.jpg');
+    background: rgba(0,0,0,0.9) url("portfolio.jpg");
     background-size: cover;
     background-blend-mode: darken;
     height: 100%;
